Fixes to Assignment Portal

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>CIT 230 Assignment Portal | Hayden A. Student | BYU-Idaho</title>
         <meta name="description" content="My Assignment Portal">
+        <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
         <header>
