--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         </nav>
         <main>
             <h2>CIT 230 - Assignment Portal</h2>
-            <li>Lesson ## <a href="#">Assignment Label</a></li>
+            <li>Lesson ## <a href="assignments/week1.html">Assignment Label</a></li>
             <img src="images/headshot.jpg" width="200" height="200" alt="My Profile Picture">
         </main>
         <footer>
