--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
         </nav>
         <main>
             <h2>CIT 230 - Assignment Portal</h2>
+            <ul id="submission-List">
             <li>Lesson 01: <a href="assignments/week1.html">Introduction</a></li>
+            </ul>
             <img src="images/headshot.jpg" width="200" height="200" alt="My Profile Picture">
         </main>
         <footer>
