--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <h2>CIT 230 - Assignment Portal</h2>
             <ul id="submission-List">
             <li>Lesson 01: <a href="assignments/week1.html">Introduction</a></li>
+            <li>Lesson 05: <a href="assignments/lesson-5/franklin-5.html">Franklin Web Page</a></li>
             </ul>
             <img src="images/headshot.jpg" width="200" height="200" alt="My Profile Picture">
         </main>
