Lesson 8 Data Table

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>CIT 230 Assignment Portal | Hayden A. Student | BYU-Idaho</title>
         <meta name="description" content="My Assignment Portal">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="styles/normalize.css">
         <link rel="stylesheet" href="styles/main.css">
     </head>
     <body>
@@ -19,6 +21,7 @@
             <ul id="submission-List">
             <li>Lesson 01: <a href="assignments/week1.html">Introduction</a></li>
             <li>Lesson 05: <a href="assignments/lesson-5/franklin-5.html">Franklin Web Page</a></li>
+            <li>Lesson 08: <a href="assignments/lesson-8/tablebuild.html">Data Table</a></li>
             </ul>
             <img src="images/headshot.jpg" width="200" height="200" alt="My Profile Picture">
         </main>
