--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
             <li>Lesson 05: <a href="assignments/lesson-5/franklin-5.html">Franklin Web Page</a></li>
             <li>Lesson 08: <a href="assignments/lesson-8/tablebuild.html">Data Table</a></li>
             </ul>
+            <li>Lesson 09: <a href="assignments/lesson-9/heroes.html">JSON Tutorial</a></li>
+            </ul>
             <img src="images/headshot.jpg" width="200" height="200" alt="My Profile Picture">
         </main>
         <footer>
